--- a/debian/changelog
+++ b/debian/changelog
@@ -1,5 +1,6 @@
 rex-apache-deploy (0.2) unstable; urgency=low
   * port to rex 0.2
+  * fixed #1, remove deploy directory is already exists
  -- Jan Gehring <jan.gehring@gmail.com>  Sun, 13 Feb 2011 19:05:00 +0200
 
 rex-apache-deploy (0.1) unstable; urgency=low
