--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,7 @@
+rex-apache-deploy (0.3) unstable; urgency=low
+  * port to rex 0.3
+ -- Jan Gehring <jan.gehring@gmail.com>  Fri, 08 Apr 2011 11:40:00 +0200
+
 rex-apache-deploy (0.2) unstable; urgency=low
   * port to rex 0.2
   * fixed #1, remove deploy directory is already exists
