--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+rex-apache-deploy (0.3.99) unstable; urgency=low
+  * dynamic deploy modules
+  * version update to 0.3.99
+ -- Jan Gehring <jan.gehring@gmail.com>  Fri, 08 Apr 2011 11:40:00 +0200
+
+
 rex-apache-deploy (0.3) unstable; urgency=low
   * port to rex 0.3
  -- Jan Gehring <jan.gehring@gmail.com>  Fri, 08 Apr 2011 11:40:00 +0200
