--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,7 @@
+rex-apache-deploy (0.4.2) unstable; urgency=low
+  * run pack hooks for sub extracts, too
+ -- Jan Gehring <jan.gehring@gmail.com>  Mon, 09 May 2011 19:25:00 +0200
+
 rex-apache-deploy (0.4.1) unstable; urgency=low
   * version bump
  -- Jan Gehring <jan.gehring@gmail.com>  Mon, 09 May 2011 19:25:00 +0200
