--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+rex-apache-deploy (0.5.0) unstable; urgency=low
+  * standardization for function calls
+  * allow = and : for seperator in templates file (Inject::Properties)
+  * version update
+ -- Jan Gehring <jan.gehring@gmail.com>  Mon, 09 May 2011 19:25:00 +0200
+
 rex-apache-deploy (0.4.2) unstable; urgency=low
   * run pack hooks for sub extracts, too
  -- Jan Gehring <jan.gehring@gmail.com>  Mon, 09 May 2011 19:25:00 +0200
