--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,7 @@
+rex-apache-deploy (0.5.1) unstable; urgency=low
+  * fixed template parsing in proerpty files
+ -- Jan Gehring <jan.gehring@gmail.com>  Mon, 20 Jun 2011 11:40:00 +0200
+
 rex-apache-deploy (0.5.0) unstable; urgency=low
   * set path to tomcat manager
   * standardization for function calls
