--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,7 @@
+rex-apache-deploy (0.5.2) unstable; urgency=low
+  * fixed another property parsing bug
+ -- Jan Gehring <jan.gehring@gmail.com>  Mon, 04 Jul 2011 11:40:00 +0200
+
 rex-apache-deploy (0.5.1) unstable; urgency=low
   * fixed template parsing in property files
   * strip windows lineending in property files
