--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,11 @@
+rex-apache-deploy (0.6.0) unstable; urgency=low
+  * added yui compressor support
+  * [Deploy::Symlink] added a default function for generate_deploy_directory
+    the default awaits now files in the format: name-[0-9\._~]+.zip|tar\.gz|tar\.bz2|war
+  * Added support to build .tar.gz packages
+ -- Jan Gehring <jan.gehring@gmail.com>  Sun, 14 Aug 2011 12:00:00 +0200
+
+
 rex-apache-deploy (0.5.2) unstable; urgency=low
   * added tab as an allowed property seperator
   * fixed another property parsing bug
