--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,6 @@
+2011-09-12 Jan Gehring <jan.gehring, gmail.com> (0.7.0)
+  * added sprocketize command
+
 2011-08-13 Jan Gehring <jan.gehring, gmail.com> (0.6.0)
   * added yui compressor support
   * [Deploy::Symlink] added a default function for generate_deploy_directory
