--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,7 @@
-2011-09-12 Jan Gehring <jan.gehring, gmail.com> (0.7.0)
+2011-09-11 Jan Gehring <jan.gehring, gmail.com> (0.7.0)
   * added sprocketize command
+  * added coffeescript support
+  * added sass support
 
 2011-08-13 Jan Gehring <jan.gehring, gmail.com> (0.6.0)
   * added yui compressor support
