--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,6 @@
+2011-09-11 Jan Gehring <jan.gehring, gmail.com> (0.8.0)
+  * added windows support
+
 2011-09-11 Jan Gehring <jan.gehring, gmail.com> (0.7.0)
   * added sprocketize command
   * added coffeescript support
