--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,6 @@
+2011-09-11 Jan Gehring <jan.gehring, gmail.com> (0.8.99.0)
+  * inject now works with already extracted source
+
 2011-09-11 Jan Gehring <jan.gehring, gmail.com> (0.8.0)
   * added windows support
 
