--- a/debian/changelog
+++ b/debian/changelog
@@ -1,7 +1,9 @@
-rex-apache-deploy (0.8.99.0) unstable; urgency=low
-  * inject (templates) now works with already extracted source
+rex-apache-deploy (0.9.0) unstable; urgency=low
+  * added full support for non compressed sources
+  * use current time if no version is available
+  * extended regexp for version detection
 
- -- Jan Gehring <jan.gehring@gmail.com>  Fri, 14 Oct 2011 10:00:00 +0200
+ -- Jan Gehring <jan.gehring@gmail.com>  Thu, 08 Dec 2011 10:00:00 +0200
 
 rex-apache-deploy (0.8.0) unstable; urgency=low
   * added windows support
