--- a/debian/changelog
+++ b/debian/changelog
@@ -1,86 +1,4 @@
-rex-apache-deploy (0.9.0) unstable; urgency=low
-  * added full support for non compressed sources
-  * use current time if no version is available
-  * extended regexp for version detection
+rex-apache-deploy (0.10.0) unstable; urgency=low
+  * updated package
 
- -- Jan Gehring <jan.gehring@gmail.com>  Thu, 08 Dec 2011 10:00:00 +0200
-
-rex-apache-deploy (0.8.0) unstable; urgency=low
-  * added windows support
-
- -- Jan Gehring <jan.gehring@gmail.com>  Sun, 18 Sep 2011 14:10:00 +0200
-
-rex-apache-deploy (0.7.0) unstable; urgency=low
-  * added sprocketize command
-  * added coffeescript support
-  * added sass support
-
- -- Jan Gehring <jan.gehring@gmail.com>  Tue, 13 Sep 2011 01:30:00 +0200
-
-rex-apache-deploy (0.6.0) unstable; urgency=low
-  * added yui compressor support
-  * [Deploy::Symlink] added a default function for generate_deploy_directory
-    the default awaits now files in the format: name-[0-9\._~]+.zip|tar\.gz|tar\.bz2|war
-  * Added support to build .tar.gz packages
- -- Jan Gehring <jan.gehring@gmail.com>  Sun, 14 Aug 2011 12:00:00 +0200
-
-
-rex-apache-deploy (0.5.2) unstable; urgency=low
-  * added tab as an allowed property seperator
-  * fixed another property parsing bug
-  * enable/disable tomcat instances in mod_jk
- -- Jan Gehring <jan.gehring@gmail.com>  Mon, 04 Jul 2011 11:40:00 +0200
-
-rex-apache-deploy (0.5.1) unstable; urgency=low
-  * fixed template parsing in property files
-  * strip windows lineending in property files
- -- Jan Gehring <jan.gehring@gmail.com>  Mon, 20 Jun 2011 11:40:00 +0200
-
-rex-apache-deploy (0.5.0) unstable; urgency=low
-  * set path to tomcat manager
-  * standardization for function calls
-  * allow = and : for seperator in templates file (Inject::Properties)
-  * version update
-  * run hooks on sub extracts, too
- -- Jan Gehring <jan.gehring@gmail.com>  Mon, 13 Jun 2011 14:30:00 +0200
-
-rex-apache-deploy (0.4.2) unstable; urgency=low
-  * run pack hooks for sub extracts, too
- -- Jan Gehring <jan.gehring@gmail.com>  Mon, 09 May 2011 19:25:00 +0200
-
-rex-apache-deploy (0.4.1) unstable; urgency=low
-  * version bump
- -- Jan Gehring <jan.gehring@gmail.com>  Mon, 09 May 2011 19:25:00 +0200
-
-rex-apache-deploy (0.3.99.3) unstable; urgency=low
-  * added Command Inject module
- -- Jan Gehring <jan.gehring@gmail.com>  Thu, 21 Apr 2011 21:15:00 +0200
-
-rex-apache-deploy (0.3.99.2) unstable; urgency=low
-  * pre and post pack hooks
- -- Jan Gehring <jan.gehring@gmail.com>  Fri, 15 Apr 2011 10:15:00 +0200
-
-rex-apache-deploy (0.3.99.1) unstable; urgency=low
-  * fixed manifest
- -- Jan Gehring <jan.gehring@gmail.com>  Fri, 15 Apr 2011 10:15:00 +0200
-
-rex-apache-deploy (0.3.99) unstable; urgency=low
-  * splitted inject and deploy code
-  * modularized inject and deploy
-  * port to rex 0.4
- -- Jan Gehring <jan.gehring@gmail.com>  Mon, 11 Apr 2011 20:40:00 +0200
-
-rex-apache-deploy (0.3) unstable; urgency=low
-  * port to rex 0.3
- -- Jan Gehring <jan.gehring@gmail.com>  Fri, 08 Apr 2011 11:40:00 +0200
-
-rex-apache-deploy (0.2) unstable; urgency=low
-  * port to rex 0.2
-  * fixed #1, remove deploy directory is already exists
-  * added get_live_version() function
- -- Jan Gehring <jan.gehring@gmail.com>  Sun, 13 Feb 2011 19:05:00 +0200
-
-rex-apache-deploy (0.1) unstable; urgency=low
-  * initial package
- -- Jan Gehring <jan.gehring@gmail.com>  Fri, 28 Jan 2011 22:20:00 +0200
-
+ -- Jan Gehring <jan.gehring@gmail.com>  Tue, 21 Aug 2012 08:00:00 +0200
