--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,6 @@
+2012-08-21 Jan Gehring <jan.gehring, gmail.com> (0.10.0)
+  * allow full pathname for inject
+
 2011-12-08 Jan Gehring <jan.gehring, gmail.com> (0.9.0)
   * added full support for non compressed sources
   * use current time if no version is available
