--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,11 @@
+2013-02-09 Jan Gehring <jan.gehring, gmail.com> (0.11.0)
+  * build command now pluggable
+  * added possibility to create deb packages
+  * added possibility to create rpm packages
+  * added git deploy method
+  * get_version_from can now be a CODE ref.
+  * added global package_option settings
+
 2012-08-21 Jan Gehring <jan.gehring, gmail.com> (0.10.1)
   * fixed a path calculation
 
