--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,6 @@
+2013-03-25 Jan Gehring <jan.gehring, gmail.com> (0.11.1)
+  * abort inject operation with die() if re-pack fails
+
 2013-02-09 Jan Gehring <jan.gehring, gmail.com> (0.11.0)
   * build command now pluggable
   * added possibility to create deb packages
